@@ -30,7 +30,6 @@
 #include "config.h"
 #include "Request.hxx"
 #include "Global.hxx"
-#include "Version.hxx"
 #include "Handler.hxx"
 #include "event/Call.hxx"
 #include "util/RuntimeError.hxx"
@@ -123,12 +122,6 @@ CurlRequest::Resume() noexcept
 	assert(registered);
 
 	curl_easy_pause(easy.Get(), CURLPAUSE_CONT);
-
-	if (IsCurlOlderThan(0x072000))
-		/* libcurl older than 7.32.0 does not update
-		   its sockets after curl_easy_pause(); force
-		   libcurl to do it now */
-		global.ResumeSockets();
 
 	global.InvalidateSockets();
 }
